--- a/salary/templates/salary/routeTime.html
+++ b/salary/templates/salary/routeTime.html
@@ -30,7 +30,19 @@
             <div class="theadTh th personalFlex">도착 시간</div>
             <div class="theadTh th personalFlex">차량 입고</div>
             <div class="theadTh th personalFlex">뒷정리 완료</div>
-            <div class="theadTh th personalFlex">운행요일</div>
+            <div class="theadTh th">
+                <div class="theadThTh th personalFlex">운행 요일</div>
+                <div class="theadThTh th flex">
+                    <div class="theadThThTh th day personalFlex">월</div>
+                    <div class="theadThThTh th day personalFlex">화</div>
+                    <div class="theadThThTh th day personalFlex">수</div>
+                    <div class="theadThThTh th day personalFlex">목</div>
+                    <div class="theadThThTh th day personalFlex">금</div>
+                    <div class="theadThThTh th day personalFlex">토</div>
+                    <div class="theadThThTh th day last personalFlex">일</div>
+                </div>
+
+            </div>
             <div class="theadTh th personalFlex">구분</div>
             <div class="theadTh th personalFlex">비고</div>
 
