--- a/salary/templates/salary/table2.html
+++ b/salary/templates/salary/table2.html
@@ -300,6 +300,7 @@
                     <div></div>
                     <div></div>
                     <div></div>
+                    <div></div>
                     <div class="tableEdit"></div>
                 </div>
                 <div class="sumAdditionalAllowance tableEdit"></div>
