--- a/salary/templates/salary/weekly_status.html
+++ b/salary/templates/salary/weekly_status.html
@@ -12,7 +12,7 @@
   {% endblock %}
   {% block content-header %}
   <div class="HeaderTitle">
-      주간근무현황
+      주근무현황
   </div>
   {% endblock %}
     {% block content %}
@@ -574,6 +574,7 @@
             <div class="tableContainer table">
 
               <div class="thead flex">
+                <div class="theadTh th">선택</div>
                 <div class="theadTh th">번호</div>
                 <div class="theadTh th">이름</div>
                 <div class="theadTh th">구분</div>
