--- a/templates/base.html
+++ b/templates/base.html
@@ -190,11 +190,23 @@
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
-                <a href="{% url 'salary:status' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">근무현황</li>
+                <a href="{% url 'salary:Salary_Distribution2' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">급여 분포도2</li>
                 </a>
                 <a href="{% url 'salary:routeTime' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">노선시간표</li>
+                </a>
+                <a href="{% url 'salary:daily_status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">일근무현황2</li>
+                </a>
+                <a href="{% url 'salary:weekly_status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">주근무현황</li>
+                </a>
+                <a href="{% url 'salary:weekly_statustwo' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">주근무현황2</li>
+                </a>
+                <a href="{% url 'salary:status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">월근무현황</li>
                 </a>
                 <a href="{% url 'salary:table' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블</li>
@@ -202,17 +214,6 @@
                 <a href="{% url 'salary:table2' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블2</li>
                 </a>
-                <a href="{% url 'salary:Salary_Distribution' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">급여 분포도</li>
-                </a>
-                <a href="{% url 'salary:daily_status' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">일일근무현황</li>
-                </a>
-                <a href="{% url 'salary:weekly_status' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">주간근무현황</li>
-                </a>
-                <a href="{% url 'salary:weekly_statustwo' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">주간근무현황2</li>
                 </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
