--- a/static/css/salary/routeTime.css
+++ b/static/css/salary/routeTime.css
@@ -60,34 +60,36 @@
 }
 
 .theadTh:nth-child(1){width: 3.1%;}
-.theadTh:nth-child(2){width: 15.7%;}
-.theadTh:nth-child(3){width: 8.4%;}
+.theadTh:nth-child(2){width: 3.1%;}
+.theadTh:nth-child(3){width: 12.6%;}
 .theadTh:nth-child(4){width: 8.4%;}
 .theadTh:nth-child(5){width: 8.4%;}
 .theadTh:nth-child(6){width: 8.4%;}
 .theadTh:nth-child(7){width: 8.4%;}
 .theadTh:nth-child(8){width: 8.4%;}
-.theadTh:nth-child(9){width: 21%;}
-.theadTh:nth-child(10){width: 4.9%;}
+.theadTh:nth-child(9){width: 8.4%;}
+.theadTh:nth-child(10){width: 21%;}
 .theadTh:nth-child(11){width: 4.9%;}
+.theadTh:nth-child(12){width: 4.9%;}
 
 .tbodyTd:nth-child(1){width: 3.1%;}
-.tbodyTd:nth-child(2){width: 15.7%;}
-.tbodyTd:nth-child(3){width: 8.4%;}
+.tbodyTd:nth-child(2){width: 3.1%;}
+.tbodyTd:nth-child(3){width: 12.6%;}
 .tbodyTd:nth-child(4){width: 8.4%;}
 .tbodyTd:nth-child(5){width: 8.4%;}
 .tbodyTd:nth-child(6){width: 8.4%;}
 .tbodyTd:nth-child(7){width: 8.4%;}
 .tbodyTd:nth-child(8){width: 8.4%;}
-.tbodyTd:nth-child(9){width: 3%;}
+.tbodyTd:nth-child(9){width: 8.4%;}
 .tbodyTd:nth-child(10){width: 3%;}
 .tbodyTd:nth-child(11){width: 3%;}
 .tbodyTd:nth-child(12){width: 3%;}
 .tbodyTd:nth-child(13){width: 3%;}
 .tbodyTd:nth-child(14){width: 3%;}
 .tbodyTd:nth-child(15){width: 3%;}
-.tbodyTd:nth-child(16){width: 4.9%;}
+.tbodyTd:nth-child(16){width: 3%;}
 .tbodyTd:nth-child(17){width: 4.9%;}
+.tbodyTd:nth-child(18){width: 4.9%;}
 
 .route{
     height: 3rem;
@@ -111,4 +113,9 @@
     width: calc(100% / 7);
     height: 100%;
     border-bottom: none;
+}
+
+.print{
+    background-color: blue;
+    width: 8rem;
 }
