feat: 일근무현황, 주근무현황 추가, 클래스 리팩토링

--- a/salary/templates/salary/daily_status.html
+++ b/salary/templates/salary/daily_status.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load dispatch_custom_tags %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/salary/daily_status.css' %}" type="text/css" />
 
@@ -9,7 +9,7 @@
 
 {% block content-header %}
 <div class="HeaderTitle">
-    일일근무현황
+    일근무현황
 </div>
 {% endblock %}
 
@@ -19,9 +19,9 @@
     <!-- 검색폼 -->
     <form action="" class="searchForm">
         <label for="" class="searchFormLabel">날짜 :</label>
-        <input type="date" name="month" class="searchFormInput searchFormInputDate">
+        <input type="date" name="date" value="{{date}}" class="searchFormInput searchFormInputDate">
         <label for="" class="searchFormLabel">이름 :</label>
-        <input name="name" value="" type="text" class="searchFormInput">
+        <input name="name" value="{{name}}" type="text" class="searchFormInput">
         <input type="submit" class="searchFormSearchBtn" value="검색">
     </form>
     <!-- 검색폼 done-->
@@ -41,15 +41,13 @@
                 <div class="theadThTh theadThThImformation th">회차</div>
                 <div class="theadThTh theadThThImformation th">노선명</div>
                 <div class="theadThTh theadThThImformation th">출/퇴근</div>
-                <div class="theadThTh th">출근시간</div>
-                <div class="theadThTh th">준비시간</div>
-                <div class="theadThTh th">차고지</div>
-                <div class="theadThTh th">출발지도착</div>
-                <div class="theadThTh th">운행출발</div>
-                <div class="theadThTh th">목적지도착</div>
-                <div class="theadThTh th">차고지</div>
-                <div class="theadThTh th">마감시간</div>
-                <div class="theadThTh th">퇴근시간</div>
+                <div class="theadThTh th">차고지 도착</div>
+                <div class="theadThTh th">사전 준비 시간</div>
+                <div class="theadThTh th">출발 시간</div>
+                <div class="theadThTh th">도착 시간</div>
+                <div class="theadThTh th">차량 입고</div>
+                <div class="theadThTh th">뒷정리 완료</div>
+
                 <div class="theadThTh th theadThDetails">
                     <div class="theadThTitle personalFlex">근로내역</div>
                     <div class="theadThContent personalFlex">
@@ -65,95 +63,55 @@
         </div>
 
         <div class="tbody">
-
+            {% for member in member_list %}
+            {% with member_id=member.id %}
+            {% with data=datas|obj:member.id %}
             <div class="tbodyDiv personalFlex">
 
                 <div class="tbodyDivTd  tbodyInformationElement td">
                     <input type="checkbox" name="" id="">
                 </div>
-                <div class="tbodyDivTd tbodyInformationElement td">1</div>
-                <div class="tbodyDivTd tbodyInformationElement td">김원탁</div>
-                <div class="tbodyDivTd tbodyInformationElement td">팀장</div>
+                <div class="tbodyDivTd tbodyInformationElement td">{{forloop.counter}}</div>
+                <div class="tbodyDivTd tbodyInformationElement td">{{member.name}}</div>
+                <div class="tbodyDivTd tbodyInformationElement td">{{member.role}}</div>
                 <div class="tbodyDivTd tbodyTdTime personalFlex td">
-
+                    {% for connect in data.connects_time_list %}
                     <div class="tbodyDivTdTdTime tbodyT personalFlex">
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">1회</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">{{forloop.counter}}회</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">{{connect.route}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">{{connect.work_type}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.0}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.1}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.2}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.3}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.4}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.5}}</div>
+
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{connect.total_time}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
                     </div>
-
-                    <div class="tbodyDivTdTdTime tbodyT personalFlex">
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                    </div>
-
-                    <div class="tbodyDivTdTdTime tbodyT personalFlex">
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">3회</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">퇴근</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                    </div>
-
-
+                    {% endfor %}
 
                     <div class="tbodyDivTdTdSum personalFlex">
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">소계</div>
                         <div class="tbodyDivTdTd none td">해당없음</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.total_work_hour_minute}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.wait_time_list.0}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.night_shift_time_list.0}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.holiday_hour_minute}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.additional_holiday_hour_minute}}</div>
                     </div>
 
                 </div>
                 <div class="tbodyDivTd tbodyInformationElement td">(서명)</div>
 
             </div>
-
-
+            {% endwith %}
+            {% endwith %}
+            {% endfor %}
         </div>
 
     </div>
@@ -168,21 +126,28 @@
 
 {% block script %}
 <script>
-    let tbodyTElements = document.getElementsByClassName("tbodyT");
-    let tbodyTElementCount = tbodyTElements.length;
+    {% autoescape off %}
+    console.log("test", {{datas}})
+    {% endautoescape %}
+</script>
+<script>
+    
+    
 
 
     function calculateHeight(count) {
-        let height = 6 + 3 * (count - 1);
+        let height = 6 + 5 * (count - 1);
         return height;
     }
 
-    let newHeight = calculateHeight(tbodyTElementCount);
-
+    
 
     // tbodyDiv의 높이를 설정
     let tbodyDivs = document.getElementsByClassName("tbodyDiv");
     for (let i = 0; i < tbodyDivs.length; i++) {
+        let tbodyTElements = tbodyDivs[i].getElementsByClassName("tbodyT");
+        let tbodyTElementCount = tbodyTElements.length;
+        let newHeight = calculateHeight(tbodyTElementCount);
         tbodyDivs[i].style.height = newHeight + "rem";
 
     }
