--- a/salary/templates/salary/status.html
+++ b/salary/templates/salary/status.html
@@ -10,7 +10,7 @@
 
 {% block content-header %}
 <div class="HeaderTitle">
-    근무현황
+    월근무현황
 </div>
 {% endblock %}
 
@@ -71,8 +71,8 @@
                 <div class="headLeft">
                     <div class="th">날짜</div>
                     <div class="tableDate">
-                        {% for date in date_list %}
-                        <div class="th dateColumn">{{date}}</div>
+                        {% for day in day_list %}
+                        <div class="th dateColumn">{{day}}</div>
                         {% endfor %}
                     </div>
                     <div class="tableDate tableWeek">
@@ -97,7 +97,7 @@
                         <div class="td tdDateData">{{time}}</div>
                         {% endfor %}
                         <div class="td tdAttendance1">근무시간</div>
-                        <div class="td tdAttendance2">{{data.total_work_minute}}</div>
+                        <div class="td tdAttendance2">{{data.total_work_hour_minute}}</div>
                         <div class="td tdAttendance1">야근</div>
                         <div class="td tdAttendance2">{{data.total_night_shift_minute}}</div>
                     </div>
