feat: 일근무현황, 주근무현황 추가, 클래스 리팩토링

--- a/templates/base.html
+++ b/templates/base.html
@@ -189,11 +189,20 @@
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
+                <a href="{% url 'salary:daily_status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">일근무현황</li>
+                </a>
+                <a href="{% url 'salary:weekly_status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">주근무현황</li>
+                </a>
                 <a href="{% url 'salary:status' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">근무현황</li>
+                  <li class="sideMenuNav2Menu">월근무현황</li>
                 </a>
                 <a href="{% url 'salary:table' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블</li>
+                </a>
+                <a href="{% url 'salary:table2' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">임금테이블2</li>
                 </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
