--- a/templates/base.html
+++ b/templates/base.html
@@ -242,9 +242,13 @@
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
+                <a href="{% url 'salary:calculator' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">수당 시급 계산기</li>
+                </a>
                 <a href="{% url 'accounting:sales' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">매출현황</li>
                 </a>
+                
                 <a href="{% url 'accounting:deposit' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">입금관리</li>
                 </a>
